--- a/views/reviews.html
+++ b/views/reviews.html
@@ -25,10 +25,10 @@
       <li><button><a href="reviews.html">Reviews</a></button></li>
       <li><button><a href="login.html">Login</a></button></li>
       <li><button><a href="signup.html">Sign Up</a></button></li> -->
-      <li><button><a href="/home">Home</a></button></li>
-      <li><button><a href="/reviews">Reviews</a></button></li>
-      <li><button><a href="/login">Login</a></button></li>
-      <li><button><a href="/signup">Sign Up</a></button></li>
+      <li><button><a href="../views/index.html">Home</a></button></li>
+      <li><button><a href="../views/reviews.html">Reviews</a></button></li>
+      <li><button><a href="../views/login.html">Login</a></button></li>
+      <li><button><a href="../views/signup.html">Sign Up</a></button></li>
     </ul>
 
   </nav>
@@ -36,15 +36,17 @@
   <hr />
 <div class="container">
   
-
   <form class="uk-form-horizontal uk-margin-large">
     <div class="uk-animation-toggle" tabindex="0">
       <div class="uk-card uk-card-default uk-card-body uk-animation-scale-up">
-          <p class="uk-text-center">BINGEFLIX</p>
+          <div class="uk-text-center">The Reviews Are In </div>
       </div>
+<br>
+</div>
+<br> 
 
     <div class="uk-margin">
-      <label class="uk-form-label" for="form-horizontal-text">Television Show</label>
+      <label class="uk-form-label" for="form-horizontal-text">Television Show </label>
       <div class="uk-form-controls row">
       
         <input class="uk-input col-8" id="userInput" type="text" placeholder="Reviews...">
@@ -54,12 +56,20 @@
 
     </div>
 
-    <div class="uk-margin">
-      <label class="uk-form-label" for="form-horizontal-select">Top 10 Options</label>
+    <div class="uk-margin"> <br>
+      <label class="uk-form-label" for="form-horizontal-select">Top 10 Shows</label>
       <div class="uk-form-controls">
         <select class="uk-select" id="form-horizontal-select">
-          <option>Option 01</option>
-          <option>Option 02</option>
+          <option>Sweet Magnolias</option>
+          <option>Space Force</option>
+          <option>The OC </option>
+          <option>The Sopranos</option>
+          <option>Alias</option>
+          <option>Smallville</option>
+          <option>24</option>
+          <option>The Flash</option>
+          <option>Dead To Me</option>
+          <option>Avatar: The Last Airbender</option>
         </select>
       </div>
     </div>
@@ -76,36 +86,36 @@
   <br>
  
 
-  <div class="container">
+  <div class="container2">
     <div class="box">
       <button class="btn btn-success"
         onclick="window.open('https:www.imdb.com/title/tt0386676/reviews?ref_=tt_ql_3','_blank')"><img
-          src="/assets/images/theoffice.jpg"></button>
-      <span>The Office</span>
+          src="../public/assets/images/theoffice.jpg"></button>
+      <!-- <span>The Office</span> -->
     </div>
     <div class="box">
       <button class="btn btn-success"
         onclick="window.open('https:www.imdb.com/title/tt0108778/reviews?ref_=tt_ql_3','_blank')"><img
-          src="/assets/images/friends.jpg"></button>
-      <span>Friends</span>
+          src="../public/assets/images/friends.jpg"></button>
+      <!-- <span>Friends</span> -->
     </div>
     <div class="box">
       <button class="btn btn-success"
         onclick="window.open('https:www.imdb.com/title/tt0098904/reviews?ref_=tt_ql_3','_blank')"><img
-          src="/assets/images/seinfeld.jpg"></button>
-      <span>Seinfeld</span>
+          src="../public/assets/images/seinfeld.jpg"></button>
+      <!-- <span>Seinfeld</span> -->
     </div>
     <div class="box">
       <button class="btn btn-success"
         onclick="window.open('https:www.imdb.com/title/tt10293938/reviews?ref_=tt_ql_3','_blank')"><img
-          src="/assets/images/outerbanks.jpg"></button>
-      <span>Outerbanks</span>
+          src="../public/assets/images/outerbanks.jpg"></button>
+      <!-- <span>Outerbanks</span> -->
     </div>
     <div class="box">
       <button class="btn btn-success"
         onclick="window.open('https:www.imdb.com/title/tt2741602/reviews?ref_=tt_ql_3','_blank')"><img
-          src="/assets/images/blacklist.jpg"></button>
-      <span>Blacklist</span>
+          src="../public/assets/images/blacklist.jpg"></button>
+      <!-- <span>Blacklist</span> -->
     </div>
   </div>
 
