--- a/views/index.html
+++ b/views/index.html
@@ -24,10 +24,10 @@
       <li><button><a href="reviews.html">Reviews</a></button></li>
       <li><button><a href="login.html">Login</a></button></li>
       <li><button><a href="signup.html">Sign Up</a></button></li> -->
-      <li><button><a href="/home">Home</a></button></li>
-      <li><button><a href="/reviews">Reviews</a></button></li>
-      <li><button><a href="/login">Login</a></button></li>
-      <li><button><a href="/signup">Sign Up</a></button></li>
+      <li><button><a href="../views/index.html">Home</a></button></li>
+      <li><button><a href="../views/reviews.html">Reviews</a></button></li>
+      <li><button><a href="../views/login.html">Login</a></button></li>
+      <li><button><a href="../views/signup.html">Sign Up</a></button></li>
     </ul>
   </nav>
 
