--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/login.css">
+  <link rel="stylesheet" type="text/css" href="../public/assets/css/login.css">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
           <button type="submit" class="btn btn-default">Login</button>
         </form>
         <br />
-        <p>Not a member? Sign Up <a href="/signup">here</a></p>
+        <p>Not a member? Sign Up <a href="../views/signup.html">here</a></p>
         <!-- <p>Not a member? Sign Up <a href="signup.html">here</a></p> -->
       </div>
     </div>
