--- a/views/myreviews.html
+++ b/views/myreviews.html
@@ -12,16 +12,28 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../public/assets/css/myreviews.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
 
   <body>
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+      <a class="navbar-brand"></a>
+  
+      <ul>
+        <li><button><a href="../views/index.html">Home</a></button></li>
+        <li><button><a href="../views/reviews.html">Reviews</a></button></li>
+        <li><button><a href="../views/login.html">Login</a></button></li>
+        <li><button><a href="../views/signup.html">Sign Up</a></button></li>
+      </ul>
+    </nav>
     
     <div class="container">
-
+      <div class="jumbotron jumbotron-fluid container3">
       <div class="jumbotron text-center mt-3">
-        <img src="/assets/images/white-logo.png" id="logo" alt="bingeflix-logo">
+        <img src="../public/assets/images/white-logo 2.png" id="logo" alt="bingeflix-logo">
         <br><br>
         <h5>Welcome <span class="member-name"></span></h5>
         <p class="lead">Tell us what you think!</p>
