--- a/views/signup.html
+++ b/views/signup.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/signup.css" />
+  <link rel="stylesheet" type="text/css" href="../public/assets/css/signup.css" />
 </head>
 
 <body>
@@ -36,7 +36,7 @@
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
-        <p>Already a Member? Log In <a href="/login">here</a></p>
+        <p>Already a Member? Log In <a href="../views/login.html">here</a></p>
       </div>
     </div>
   </div>
