--- a/public/assets/css/reviews.css
+++ b/public/assets/css/reviews.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 15px;
-    font-family: 'Sigmar One', cursive;
+    font-family: Comic Sans MS;
     font-weight: 400;
     /* margin-top: 100px;
     margin-bottom: 100px;
