--- a/views/reviews.html
+++ b/views/reviews.html
@@ -21,14 +21,10 @@
     <a class="navbar-brand"></a>
 
     <ul>
-      <!-- <li><button><a href="index.html">Home</a></button></li>
-      <li><button><a href="reviews.html">Reviews</a></button></li>
-      <li><button><a href="login.html">Login</a></button></li>
-      <li><button><a href="signup.html">Sign Up</a></button></li> -->
       <li><button><a href="../views/index.html">Home</a></button></li>
       <li><button><a href="../views/reviews.html">Reviews</a></button></li>
-      <li><button><a href="../views/login.html">Login</a></button></li>
-      <li><button><a href="../views/signup.html">Sign Up</a></button></li>
+      <li><button><a href="../views/myreviews.html">My Reviews</a></button></li>
+      
     </ul>
 
   </nav>
