--- a/views/myreviews.html
+++ b/views/myreviews.html
@@ -11,9 +11,10 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
-    />
+/>
     <link rel="stylesheet" type="text/css" href="../public/assets/css/myreviews.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    
   </head>
 
   <body>
@@ -25,50 +26,33 @@
       <ul>
         <li><button><a href="../views/index.html">Home</a></button></li>
         <li><button><a href="../views/reviews.html">Reviews</a></button></li>
-        <li><button><a href="../views/login.html">Login</a></button></li>
-        <li><button><a href="../views/signup.html">Sign Up</a></button></li>
+        <li><button><a href="../views/myreviews.html">My Reviews</a></button></li>
+        
       </ul>
     </nav>
-    
-    <div class="container">
-      <div class="jumbotron jumbotron-fluid container3">
-      <div class="jumbotron text-center mt-3">
-        <img src="../public/assets/images/white-logo 2.png" id="logo" alt="bingeflix-logo">
-        <br><br>
+  
+    <div class="jumbotron jumbotron-fluid container3">
+      <div class="container">
+        <h1>BINGEFLIX</h1>
         <h5>Welcome <span class="member-name"></span></h5>
         <p class="lead">Tell us what you think!</p>
-        <hr />
-  
-        <ul class="nav">
-  
-          <li class="nav-item ml-auto">
-            <a class="nav-link" href="./logout">
-              Logout
-            </a>
-          </li>
-  
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="./profile">
-              Profile
-            </a>
-          </li> -->
-        </ul>
-  
+      </div>
+    </div>
         <hr />
         <div class="row">
           <div class="col-md-3 sidenav text-left">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="./tvreviews">View TV Reviews</a>
+                <a class="nav-link" href="../views/reviews.html">View TV Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./myreviews">My TV Reviews</a>
+                <a class="nav-link" href="../views/myreviews.html">My TV Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./following">Favorite TV Reviews</a>
+                <a class="nav-link" href="../views/following.html">Favorite TV Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./create">Create TV Reviews</a>
+                <a class="nav-link" href="../views/create.html">Create TV Reviews</a>
               </li>
             </ul>
           </div>
