--- a/views/create.html
+++ b/views/create.html
@@ -17,6 +17,17 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+
+      <a class="navbar-brand"></a>
+  
+      <ul>
+        <li><button><a href="../views/index.html">Home</a></button></li>
+        <li><button><a href="../views/reviews.html">Reviews</a></button></li>
+        <li><button><a href="../views/myreviews.html">My Reviews</a></button></li>
+        
+      </ul>
+    </nav>
     <div class="container">
 
       <div class="jumbotron text-center mt-3">
