--- a/views/myreviews.html
+++ b/views/myreviews.html
@@ -43,14 +43,14 @@
           <div class="col-md-3 sidenav text-left">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="../views/reviews.html">View TV Reviews</a>
+                <a class="nav-link" href="../views/reviews.html">The Reviews Are</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="../views/myreviews.html">My TV Reviews</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../views/following.html">Favorite TV Reviews</a>
-              </li>
+                <!-- <a class="nav-link" href="../views/following.html">Favorite TV Reviews</a>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="../views/create.html">Create TV Reviews</a>
               </li>
