updated all the routes so it will show up with server.js

--- a/views/create.html
+++ b/views/create.html
@@ -22,9 +22,9 @@
       <a class="navbar-brand"></a>
   
       <ul>
-        <li><button><a href="../views/index.html">Home</a></button></li>
-        <li><button><a href="../views/reviews.html">Reviews</a></button></li>
-        <li><button><a href="../views/myreviews.html">My Reviews</a></button></li>
+        <li><button><a href="/">Home</a></button></li>
+        <li><button><a href="/reviews">Reviews</a></button></li>
+        <li><button><a href="/myreviews">My Reviews</a></button></li>
         
       </ul>
     </nav>
