--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.4.6/dist/css/uikit.min.css" />
-  <link rel="stylesheet" type="text/css" href="../public/assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 
 </head>
 
@@ -20,11 +20,11 @@
     <a class="navbar-brand"></a>
 
     <ul>
-      <li><button><a href="../views/index.html">Home</a></button></li>
-      <li><button><a href="../views/reviews.html">Reviews</a></button></li>
-      <li><button><a href="../views/myreviews.html">My Reviews</a></button></li>
-      <li><button><a href="../views/login.html">Login</a></button></li>
-      <li><button><a href="../views/signup.html">Sign Up</a></button></li>
+      <li><button><a href="/">Home</a></button></li>
+      <li><button><a href="/reviews">Reviews</a></button></li>
+      <li><button><a href="/myreviews">My Reviews</a></button></li>
+      <li><button><a href="/login">Login</a></button></li>
+      <li><button><a href="/signup">Sign Up</a></button></li>
     </ul>
   </nav>
 
@@ -98,7 +98,7 @@
     </div>
     </div>
   </footer>
-  <script src="../routes/omdb-api.js"></script>
+  <script src="/assets/js/omdb-api.js"></script>
 </body>
   
 </html>
