--- a/views/myreviews.html
+++ b/views/myreviews.html
@@ -12,7 +12,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
 />
-    <link rel="stylesheet" type="text/css" href="../public/assets/css/myreviews.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/myreviews.css" />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     
   </head>
@@ -24,9 +24,9 @@
       <a class="navbar-brand"></a>
   
       <ul>
-        <li><button><a href="../views/index.html">Home</a></button></li>
-        <li><button><a href="../views/reviews.html">Reviews</a></button></li>
-        <li><button><a href="../views/myreviews.html">My Reviews</a></button></li>
+        <li><button><a href="/">Home</a></button></li>
+        <li><button><a href="/reviews">Reviews</a></button></li>
+        <li><button><a href="/myreviews">My Reviews</a></button></li>
         
       </ul>
     </nav>
@@ -43,16 +43,16 @@
           <div class="col-md-3 sidenav text-left">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="../views/reviews.html">The Reviews Are</a>
+                <a class="nav-link" href="/reviews">The Reviews Are</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../views/myreviews.html">My TV Reviews</a>
+                <a class="nav-link" href="/myreviews">My TV Reviews</a>
               </li>
               <li class="nav-item">
                 <!-- <a class="nav-link" href="../views/following.html">Favorite TV Reviews</a>
               </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="../views/create.html">Create TV Reviews</a>
+                <a class="nav-link" href="/create">Create TV Reviews</a>
               </li>
             </ul>
           </div>
