--- a/views/create.html
+++ b/views/create.html
@@ -31,7 +31,7 @@
     <div class="container">
 
       <div class="jumbotron text-center mt-3">
-        <img src="/assets/images/white-logo.png" id="logo" alt="bingeflix-logo">
+        <img src="/assets/images/white-logo 2.jpg" id="logo" alt="bingeflix-logo">
         <br><br>
         <h5>Welcome <span class="member-name"></span></h5>
         <p class="lead">Tell us what you think!</p>
@@ -62,9 +62,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="./myreviews">My TV Reviews</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="./following">Favorite TV Reviews</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="./create">Create TV Reviews</a>
               </li>
