--- a/views/following.html
+++ b/views/following.html
@@ -20,7 +20,7 @@
    <div class="container">
 
     <div class="jumbotron text-center mt-3">
-      <img src="/assets/images/white-logo.png" id="logo" alt="bingeflix-logo">
+      <img src="/assets/images/white-logo 2.jpg" id="logo" alt="bingeflix-logo">
       <br><br>
       <h5>Welcome <span class="member-name"></span></h5>
       <p class="lead">Tell us what you think!</p>
