--- a/views/myreviews.html
+++ b/views/myreviews.html
@@ -43,11 +43,11 @@
           <div class="col-md-3 sidenav text-left">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="/reviews">The Reviews Are</a>
+                <a class="nav-link" href="/reviews">The Reviews Are In</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="/myreviews">My TV Reviews</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <!-- <a class="nav-link" href="../views/following.html">Favorite TV Reviews</a>
               </li> -->
